2003-11-05  Richard Williamson   <rjw@apple.com>

	Fixed 3413067, 3405797, 3456877
	Use ATSUI to render Arabic and Hebrew.

        Reviewed by John.

        * WebCoreSupport.subproj/WebTextRenderer.m:
        (shouldUseATSU):

2003-11-05  John Sullivan  <sullivan@apple.com>

	- fixed <rdar://problem/3469791>: Bigger/Smaller commands are 
	disabled for HTML Mail in separate window (w/WebKit-111)

        Reviewed by Darin.

        * WebView.subproj/WebFrameView.m:
        (-[WebFrameView acceptsFirstResponder]):
	always be willing to become first responder, even if no page
	has yet been loaded.
        (-[WebFrameView becomeFirstResponder]):
	if no page has yet been loaded (so our scrollview refuses
	first responder-ness), don't do any special becoming-first-
	responder shenanigans.

	Also removed obsolete overrides for nextKeyView, nextValidKeyView,
	previousKeyView, and previousValidKeyView that are no longer
	required now that we handle the key loop more like NSScrollView.

        * WebView.subproj/WebFrameViewPrivate.h:
	removed now-unused ivar inNextValidKeyView

2003-11-05  Richard Williamson   <rjw@apple.com>

	Fixed 3029966.  Animated backgrounds specified in <BODY> don't animate
	Fixed 3474824.  Tiled animated GIFs don't animate.
	Fixed 3029966.  Animated backgrounds specified with CSS don't animate.

        Reviewed by Chris.

        * WebCoreSupport.subproj/WebImageRenderer.h:
        * WebCoreSupport.subproj/WebImageRenderer.m:
        (-[WebImageRenderer nextFrame:]):
        (-[WebImageRenderer drawImageInRect:fromRect:]):
        (-[WebImageRenderer startAnimationIfNecessary]):
        (-[WebImageRenderer tileInRect:fromPoint:]):
        * WebView.subproj/WebImageView.m:
        (-[WebImageView drawRect:]):

2003-11-05  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3201364>: Safari crashes when hosting carbon plug-in using drag and drop

        Reviewed by rjw.

        * WebView.subproj/WebView.m: